<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/title_username_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/default_profile"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/tv_user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_username_degree"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

        <LinearLayout
            android:id="@+id/container_summary_achievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_title">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_completed"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:padding="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num_completed"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/achievement_completed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/completed_achievement"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_uncompleted"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:padding="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num_uncompleted"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/achievement_uncompleted" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/uncompleted_achievement"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_all_achievement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_achievement"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rv_achievement"
            app:layout_constraintEnd_toEndOf="@+id/container_summary_achievement"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="@+id/container_summary_achievement"
            app:layout_constraintTop_toBottomOf="@+id/container_summary_achievement" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_achievement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="70dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_all_achievement"
            tools:listitem="@layout/item_achievement"
            android:clipToPadding="false"
            />

        <!--        Settings Coming Soon-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_settings"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Settings"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="15sp"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.047"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/rv_achievement" />-->

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/cv_edit_name"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="50dp"-->
        <!--            android:visibility="visible"-->
        <!--            app:cardCornerRadius="8dp"-->
        <!--            app:cardElevation="4dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_settings">-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:gravity="center_vertical"-->
        <!--                android:orientation="horizontal"-->
        <!--                android:padding="16dp">-->

        <!--                <ImageView-->
        <!--                    android:id="@+id/option_icon"-->
        <!--                    android:layout_width="24dp"-->
        <!--                    android:layout_height="24dp"-->
        <!--                    android:src="@drawable/ic_user_profile"-->
        <!--                    app:tint="@color/black" />-->

        <!--                <TextView-->
        <!--                    android:id="@+id/option_text"-->
        <!--                    android:layout_width="0dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_marginStart="16dp"-->
        <!--                    android:layout_weight="1"-->
        <!--                    android:text="Edit Profile"-->
        <!--                    android:textColor="@color/black"-->
        <!--                    android:textSize="16sp" />-->

        <!--                <ImageView-->
        <!--                    android:id="@+id/option_arrow"-->
        <!--                    android:layout_width="24dp"-->
        <!--                    android:layout_height="24dp"-->
        <!--                    android:src="@drawable/baseline_arrow_forward_ios_24"-->
        <!--                    app:tint="@color/black" />-->

        <!--            </LinearLayout>-->

        <!--        </androidx.cardview.widget.CardView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
